--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "4.5.0"
+    "@prisma/client": "4.5.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "prisma": "4.5.0",
