--- a/serverless.yml
+++ b/serverless.yml
@@ -20,24 +20,24 @@ functions:
       - http:
           method: GET
           path: /seed
-  getUsers:
-    handler: handlers/users.handler
-    events:
-      - http:
-          method: GET
-          path: /users
-  createUser:
-    handler: handlers/create-user.handler
+  login:
+    handler: handlers/login.handler
     events:
       - http:
           method: POST
-          path: /users
-  getPosts:
-    handler: handlers/posts.handler
+          path: /login
+  signUp:
+    handler: handlers/signUp.handler
     events:
       - http:
-          method: GET
-          path: /posts
+          method: POST
+          path: /sign-up
+  getPosts:
+    handler: handlers/operations.handler
+    events:
+      - http:
+          method: POST
+          path: /operations
 
 # only include the Prisma binary required on AWS Lambda while packaging
 package:
