--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "node index.js",
     "prisma:introspect": "prisma introspect",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "deploy": "npx serverless deploy"
   },
   "dependencies": {
     "@prisma/client": "4.5.0",
